--- a/index.html
+++ b/index.html
@@ -2,3 +2,55 @@ jenkins is a open source automation server
 we can automatically deploy,run and build test
 it deploys app
 file
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Example HTML Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 20px;
+        }
+        h1 {
+            margin: 0;
+        }
+        section {
+            padding: 20px;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 20px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Example HTML Page</h1>
+</header>
+
+<section>
+    <h2>Welcome to my example page!</h2>
+    <p>This is a simple HTML page example. You can modify it as you like.</p>
+</section>
+
+<footer>
+    <p>&copy; 2024 maansi</p>
+</footer>
+
+</body>
+</html>
